# action_test

./: .gitignore  Cargo.toml
.github/: mac.yaml
.github/workflows/: rust.yml
src/: static-server.rs
